// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lerna.json: empty directory 1`] = `
Object {
  "lerna": "__TEST_VERSION__",
  "packages": Array [
    "packages/*",
  ],
  "version": "0.0.0",
}
`;

exports[`lerna.json: updates 1`] = `
Object {
  "commands": Object {
    "bootstrap": Object {
      "hoist": true,
    },
    "init": Object {
      "exact": true,
    },
  },
  "lerna": "__TEST_VERSION__",
  "packages": Array [
    "packages/*",
  ],
  "version": "1.0.0",
}
`;

exports[`package.json: empty directory 1`] = `
Object {
  "devDependencies": Object {
    "lerna": "^__TEST_VERSION__",
  },
}
`;

exports[`package.json: updates 1`] = `
Object {
  "devDependencies": Object {
    "lerna": "__TEST_VERSION__",
  },
  "name": "updates",
}
`;

exports[`stderr: empty directory 1`] = `
"lerna info version __TEST_VERSION__
lerna info Initializing Git repository
lerna info Creating package.json
lerna info Creating lerna.json
lerna info Creating packages directory
lerna success Initialized Lerna files"
`;

exports[`stderr: has-version 1`] = `
"lerna info version __TEST_VERSION__
lerna info Creating package.json
lerna info Creating lerna.json
lerna info Creating packages directory
lerna info Removing old VERSION file
lerna success Initialized Lerna files"
`;

exports[`stderr: updates 1`] = `
"lerna info version __TEST_VERSION__
lerna info Updating package.json
lerna info Updating lerna.json
lerna info Creating packages directory
lerna success Initialized Lerna files"
`;
